--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="user_email">Enter Your Email</string>
     <string name="name">Enter Your Name</string>
     <string name="sign_up">Sign Up</string>
+    <string name="wmh">Write message here</string>
+    <string name="passonate">By PassonateTech</string>
 </resources>
